k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: messager-team
  annotations:
    argocd.argoproj.io/sync-wave: "0"
