k8s/base/bff-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bff
  namespace: messager-team
  annotations:
    argocd.argoproj.io/sync-wave: "4"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bff
  template:
    metadata:
      labels:
        app: bff
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: role
                operator: In
                values:
                - app
      containers:
        - name: bff
          image: mablinov2704/bff:latest
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 15
          resources:
            requests:
              cpu: "150m"
              memory: "192Mi"
            limits:
              cpu: "300m"
              memory: "384Mi"
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: bff-service
  namespace: messager-team
  annotations:
    argocd.argoproj.io/sync-wave: "4"
spec:
  selector:
    app: bff
  ports:
    - name: http
      port: 8080
      targetPort: 8080
