k8s/base/message-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: message-service
  namespace: messager-team
  annotations:
    argocd.argoproj.io/sync-wave: "3"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: message-service
  template:
    metadata:
      labels:
        app: message-service
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: role
                operator: In
                values:
                - app
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 1
            preference:
              matchExpressions:
              - key: disk
                operator: In
                values:
                - fast
      containers:
        - name: message-service
          image: mablinov2704/message-service:latest
          readinessProbe:
            httpGet:
              path: /api/v1/messages
              port: 8082
            initialDelaySeconds: 5
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /api/v1/messages
              port: 8082
            initialDelaySeconds: 10
            periodSeconds: 15
          resources:
            requests:
              cpu: "150m"
              memory: "192Mi"
            limits:
              cpu: "300m"
              memory: "384Mi"
          ports:
            - containerPort: 8082
          volumeMounts:
            - name: uploads
              mountPath: /app/uploads
      volumes:
        - name: uploads
          persistentVolumeClaim:
            claimName: message-uploads-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: message-service-service
  namespace: messager-team
  annotations:
    argocd.argoproj.io/sync-wave: "3"
spec:
  selector:
    app: message-service
  ports:
    - name: http
      port: 8082
      targetPort: 8082
